java/java-tests/testData/psi/parser-full/annotationParsing/annotation/Errors.java
@Ann(<error descr="Cannot find method 'value'">0</error>) class D {
}